tests/negative/typecheck/try_function_not_error.orng
// try_function_not_error.orng:6:8: error: enclosing function around try expression does not return an error
//     try f()
//       ^
// 
fn main() -> (ok: Int | err: Char) {
    try f()
    .ok(4)
}

fn f() -> Char!Int {
    return .err('d')
}